# sdl2web

./: CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindGLEW.cmake  FindSDL2.cmake
